assets/newdesign1 improved

--- a/assets/newdesign1/index.html
+++ b/assets/newdesign1/index.html
@@ -98,11 +98,20 @@
      <section class="features_teasers_wrapper">
           <div class="container">
                <div class="row">
-                    <div class="feature_teaser col-sm-4 col-md-4"> <img alt="responsive" src="images/responsive.png">
+                    <div class="feature_teaser col-sm-4 col-md-4">
+                         <!--
+                         <img alt="responsive" src="images/responsive.png">
+                         height="200px" width="200px"
+                         -->
+                         <img alt="responsive" height="200px" src="/assets/svg/funnel-jobs-2.svg">
                          <h3>Clean, Responsive Design</h3>
                          <p>A multipurpose but mainly<strong> business oriented</strong> design, built to serve as a foundation for your web projects. Suspendisse nec risus fermentum sapien congue fermentum sed at lorem.</p>
                     </div>
-                    <div class="feature_teaser col-sm-4 col-md-4"> <img alt="responsive" src="images/git.png">
+                    <div class="feature_teaser col-sm-4 col-md-4">
+                         <!--
+                         <img alt="responsive" src="images/git.png">
+                         -->
+                         <img alt="responsive" height="200px" src="/assets/svg/remotenes.svg">
                          <h3>Based on Twitter Bootstrap</h3>
                          <p>The front-end development framework with a <strong>steep learning curve</strong>. It changes the way you develop sites. Suspendisse nec risus fermentum sapien congue fermentum sed at lorem.</p>
                     </div>
