--- a/assets/newdesign1/table1.html
+++ b/assets/newdesign1/table1.html
@@ -24,7 +24,16 @@
 <header>
      <div class="container">
           <div class="navbar navbar-default" role="navigation">
-               <div class="navbar-header"><a class="navbar-brand" href="index.html"> <img src="images/restart_logo.png" alt="optional logo" height="90" width="90"> <span class="logo_title">{re}<strong>start</strong></span> <span class="logo_subtitle">a multipurpose template</span> </a><a class="btn btn-navbar btn-default navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="nb_left pull-left"> <span class="fa fa-reorder"></span></span> <span class="nb_right pull-right">menu</span> </a></div>
+               <div class="navbar-header"><a class="navbar-brand" href="index.html">
+                    <!--
+                    <img src="images/restart_logo.png" alt="optional logo" height="90" width="90">
+                    -->
+                    <span class="logo_title" style="color: #428bca;"><small>100% </small><strong>remote&nbsp;jobs</strong></span>
+                    <span class="logo_subtitle">all remote jobs in one place</span> </a>
+                    <a class="btn btn-navbar btn-default navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                         <span class="nb_left pull-left"> <span class="fa fa-reorder"></span>
+                         </span> <span class="nb_right pull-right">menu</span> </a>
+               </div>
                <div class="collapse navbar-collapse">
                     <ul class="nav pull-right navbar-nav">
                          <li><a href="index.html">Home</a></li>
@@ -50,10 +59,9 @@
                     </ul>
                </div>
           </div>
-          <div id="social_media_wrapper"> <a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a> <a href="https://twitter.com/leonartgr"><i class="fa fa-twitter"></i></a> <a href="#googleplus"><i class="fa fa-google-plus"></i></a> </div>
-          <div id="sign"><a href="register.html"><i class="fa fa-user"></i><span>Register/Sign in</span></a></div>
      </div>
 </header>
+<!--
 <div class="full_page_photo" style="background-image: url(images/services.jpg);">
      <div class="container">
           <section class="call_to_action">
@@ -63,6 +71,8 @@
           </section>
      </div>
 </div>
+-->
+
 <div class="main">
 
      <section class="hgroup">
