--- a/misc/pages.html
+++ b/misc/pages.html
@@ -1,15 +1,15 @@
 ---
 layout: page
-title: Pages 
-header: Pages
+title: Miscellaneous pages
+header: Miscellaneous pages
+breadcrumb_title: Miscellaneous
+breadcrumb_url: /misc/pages.html
 ---
 {% comment %}
 group: navigation
 {% endcomment %}
 
 {% include JB/setup %}
-
-<h2>All Pages</h2>
 <ul>
 {% assign pages_list = site.pages %}
 {% include JB/pages_list %}
