--- a/misc/categories.html
+++ b/misc/categories.html
@@ -18,7 +18,7 @@ group: navigation
 
 
 {% for category in site.categories %}
-  <h3 class="section_header elegant"id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h3>
+  <h3 class="section_header elegant"id="{{ category[0] }}-ref">{{ category[0] | join: "" }}</h3>
   <ul>
     {% assign pages_list = category[1] %}  
     {% include JB/pages_list %}
