--- a/assets/diagram/stat-salary-frontend2.html
+++ b/assets/diagram/stat-salary-frontend2.html
@@ -9,80 +9,62 @@
     var x1 = ["70000", "125000", "50000", "90000", "50000", "60000", "90000", "70000", "80000", "90000", "120000", "60000", "50000", "85000", "75000", "80000", "130000", "30000", "50000", "10000", "85000", "20000", "40000", "90000", "70000", "90000", "130000", "40000", "60000", "150000", "120000", "24000", "45000", "100000", "90000", "100000", "10000", "70000", "70000", "75000", "78000", "50000", "50000", "50000", "70000", "50000", "85000", "65000", "90000", "90000", "90000", "100000", "75000", "120000", "150000", "55000", "60000"];
     var x2 = ["90000", "130000", "75000", "130000", "200000", "135000", "120000", "110000", "115000", "125000", "125000", "120000", "65000", "100000", "125000", "120000", "175000", "60000", "60000", "110000", "120000", "120000", "60000", "130000", "100000", "130000", "165000", "90000", "150000", "160000", "42000", "80000", "180000", "120000", "125000", "25000", "150000", "150000", "75000", "114000", "50000", "74000", "50000", "110000", "80000", "100000", "130000", "120000", "120000", "110000", "149000", "99000", "70000", "80000"];
 
-    var rangeArr = [];
-    var s = 0;
-    for (var i = 0; s <= 260000; i ++) {
-        rangeArr[i] = s;
-        s = s + 10000;
-    }
-
     var trace1 = {
         x: x1,
-        opacity: 0.5,
-        name: "Min range (USD/Year)",
-        histnorm: "count",
+        //orientation: 'h',
+        name: "Min range",
+        type: "box",
+        //boxpoints: 'suspectedoutliers',
+        boxpoints: 'all',
+        jitter: 0.3,
+        //boxpoints: 'Outliers',
         marker: {
-            color: 'rgb(107,174,214, 0.4)',
+            color: 'rgb(107,174,214)',
+            outliercolor: 'rgba(219, 64, 82, 0.6)',
             line: {
-                color: 'rgb(107,174,214, 1)',
-                width: 1
+                outliercolor: 'rgba(219, 64, 82, 1.0)',
+                outlierwidth: 2
             }
-        },
-        type: "histogram",
-        xbins: {
-            start: 0,
-            end: 260000,
-            size: 10000
         }
-
     };
+
     var trace2 = {
         x: x2,
-        opacity: 1,
+        type: 'box',
+        name: "Max range",
+        //boxpoints: 'suspectedoutliers',
+        boxpoints: 'all',
+        jitter: 0.3,
+        //boxpoints: 'Outliers',
         marker: {
-            color: 'rgb(8,81,156, 0.2)',
+            color: 'rgb(8,81,156)',
+            outliercolor: 'rgba(219, 64, 82, 0.6)',
             line: {
-                color: 'rgb(8,81,156, 1)',
-                width: 1
+                outliercolor: 'rgba(219, 64, 82, 1.0)',
+                outlierwidth: 2
             }
         },
-        name: "Max range (USD/Year)",
-        type: "histogram",
-        xbins: {
-            start: 0,
-            end: 260000,
-            size: 10000
-        }
     };
-    var data = [trace2, trace1];
+
+    var data = [trace1, trace2];
 
     var layout = {
-        autosize: true,
-        showlegend: true,
+        title: "EARLY PROTOTYPE: Remote frontend (JavaScript) jobs - a BOX PLOT of min/max salary",
         paper_bgcolor: 'rgb(243, 243, 243)',
         plot_bgcolor: 'rgb(243, 243, 243)',
-        "breakpoints": [],
-        barmode: "overlay",
-        title: "EARLY PROTOTYPE: Remote frontend (JavaScript) jobs - a HISTOGRAM of min/max salary",
-
-        yaxis: {
-            autorange: true,
-            fixedrange: true,
-            "title": "Number of Jobs (Frequency)"
-        },
+        showlegend: false,
 
         xaxis: {
             dtick: 10000,
-            //autorange: false,
-            range: rangeArr,
-            fixedrange: true,
+            autorange: true,
             showgrid: true,
             zeroline: true,
+            //dtick: 5,
             gridcolor: 'rgb(255, 255, 255)',
             gridwidth: 1,
             zerolinecolor: 'rgb(255, 255, 255)',
             zerolinewidth: 2,
-            "title": "Salary, USD"
+            "title": "Salary, USD/Year"
         }
     };
     Plotly.newPlot('myDiv', data, layout, {displayModeBar: false});
