just a try again
Former-commit-id: f9e0e9efc61970544c54705bd4937d1580348aff

--- a/assets/diagram/stat-salary-frontend2.html
+++ b/assets/diagram/stat-salary-frontend2.html
@@ -52,10 +52,11 @@
             //orientation: 'h',
             name: "Min range",
             type: "box",
-            boxpoints: 'suspectedoutliers',
-            //boxpoints: 'all',
-            jitter: 0.3,
             //boxpoints: 'Outliers',
+            //boxpoints: 'suspectedoutliers',
+            boxmean: true,
+            boxpoints: 'all',
+            jitter: 0.3,
             marker: {
                 color: 'rgb(107,174,214)',
                 outliercolor: 'rgba(219, 64, 82, 0.6)',
@@ -70,10 +71,11 @@
             x: xMax,
             type: 'box',
             name: "Max range",
-            boxpoints: 'suspectedoutliers',
-            //boxpoints: 'all',
-            jitter: 0.3,
             //boxpoints: 'Outliers',
+            //boxpoints: 'suspectedoutliers',
+            boxpoints: 'all',
+            boxmean: true,
+            jitter: 0.3,
             marker: {
                 color: 'rgb(8,81,156)',
                 outliercolor: 'rgba(219, 64, 82, 0.6)',
