--- a/assets/experimental/test-subscribe-1.html
+++ b/assets/experimental/test-subscribe-1.html
@@ -7,7 +7,6 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0" />
-  <link rel="canonical" href="https://remote4me.com/remote-big-data-science-machine-learning-jobs" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" type="text/css">
   <link rel="stylesheet" href="/assets/themes/restart/css/animate.css" type="text/css">
   <link rel="stylesheet" href="/assets/themes/restart/css/style.css" type="text/css">
@@ -654,7 +653,10 @@
               <div>
                 <br/>
                 <p>
-                If you subscribe to daily email updates then I ask for a link. Please just link this site from a prominent page of your site or blog. <br/>Alternatively: post on your favorite social network, link back to https://remote4me.com/ and share the link.
+                I love to fill your inbox with fresh jobs on the daily basis and just ask you for a little favor in exchange: I ask for a link.
+                </p>
+                <p>
+                Please link this site from a prominent page of your site or blog. <br/>Alternatively: post on your favorite social network, link back to https://remote4me.com/ and share the link.
                 </p>
                 <p>
                 One link is enough: after this your get email updates as long as you wish!
