--- a/assets/experimental/test-subscribe-1.html
+++ b/assets/experimental/test-subscribe-1.html
@@ -634,7 +634,7 @@
   </div>
 
   <div class="modal fade subscribe-daily-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -649,21 +649,26 @@
               <input type="email" class="form-control" id="inputEmail3" placeholder="you@youremail.com">
             </div>
 
+            <br/>
             <div class="form-group">
-              <div>
-                <br/>
-                <p>
-                I love to fill your inbox with fresh jobs on the daily basis and just ask you for a little favor in exchange: I ask for a link.
-                </p>
-                <p>
-                Please link this site from a prominent page of your site or blog. <br/>Alternatively: post on your favorite social network, link back to https://remote4me.com/ and share the link.
-                </p>
-                <p>
-                One link is enough: after this your get email updates as long as you wish!
-                </p>
-              </div>
+              <div class="row">
               <label for="inputUrl4" class="col-sm-4 control-label" style="padding-left: 0px;">A page/post/article URL:</label>
-              <input type="url" class="form-control" name="url" id="inputUrl4" placeholder="https://social-network.com/post-url" pattern="https://.*" size="15" width="">
+              </div>
+
+              <div class="row">
+                <div>
+                  <p>
+                  I love to fill your inbox with fresh jobs on the daily basis and just ask you for a little favor in exchange: I ask for a link.
+                  </p>
+                  <p>
+                  Please link this site from a prominent page of your site or blog. <br/>Alternatively: post on your favorite social network or online forum, link back to this site and share the link.
+                  </p>
+                  <p>
+                  One link is enough: after this your get email updates as long as you wish!
+                  </p>
+                </div>
+                <input type="url" class="form-control" name="url" id="inputUrl4" placeholder="https://social-network.com/post-url" pattern="https://.*" size="15" width="">
+              </div>
             </div>
 
           </form>
