--- a/assets/experimental/test-subscribe-1.html
+++ b/assets/experimental/test-subscribe-1.html
@@ -447,7 +447,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
           <div class="btn-group btn-div" style="">
-            <button class="btn btn-primary dropdown-toggle " type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-default dropdown-toggle " type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Get email updates
               <span class="caret"></span>
             </button>
@@ -561,15 +561,13 @@
   </section>
 
   <section>
-    <div class="container">
       <div>
-        <div id="loaderID" class="loader">
+        <div class="loader">
           <div class="container">
             <div class="row">
-              <div class="col-xs-1 col-xs-offset-5">
+              <div class="col-xs-2 col-xs-offset-5">
                 <div class="center-block">
-                  <i class=" center-block fa fa-cog fa-spin fa-3x fa-fw"></i>
-                  <span class="center-block sr-only">Loading...</span>
+                  <span class="center-block sr-only">Imagine here the list of jobs. (but this is just a mock-up, so temporarily no list)</span>
                 </div>
               </div>
             </div>
@@ -590,7 +588,6 @@
           var dataFileName;
           dataFileName = 'TECH1_frontend';
       </script>
-      <script src="/assets/lunr.js"></script>
       <noscript>
         <style>
           #table {
@@ -702,13 +699,11 @@
   </div>
 
 
-  <hr>
   <footer>
     <section class="copyright">
       <div class="container">
         <div class="row">
           <div class="col-xs-6 col-md-6"></div>
-          <div class="text-right col-xs-6 col-md-6">© Dmitri Geller</div>
         </div>
       </div>
     </section>
@@ -731,10 +726,10 @@
 
 <!--
 <script type="text/javascript" src="/assets/themes/restart/js/render_jobad_list_filter.js"></script>
--->
 
 <script type="text/javascript" src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
+-->
 
 
 <script id="detailFormatter" type="text/x-handlebars-template">
