--- a/assets/experimental/test-subscribe-1.html
+++ b/assets/experimental/test-subscribe-1.html
@@ -604,23 +604,34 @@
 
 
   <div class="modal fade subscribe-weekly-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="gridSystemModalLabel">Get a <strong>weekly</strong> email of all new remote frontend jobs</h4>
+          <h4 class="modal-title" id="gridSystemModalLabel"> Mail list "Weekly Remote frontend (JavaScript) jobs"</h4>
         </div>
 
-
         <div class="modal-body" id="reportthisjob-modal-body">
-          <form class="form-horizontal">
-            <div class="form-group">
-              <label for="inputEmail2" class="col-sm-2 control-label">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail2" placeholder="Email">
-              </div>
+          <div class="row">
+            <div class="col-md-8">
+              <p>
+                <span class="fa fa-check" style="color: #428bca;"></span> Every Saturday there will be the email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com last week.
+              </p>
+              <p>
+                <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.
+              </p>
+              <p>
+                <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send jobs. Not for marketing/promotional purposes.
+              </p>
             </div>
-          </form>
+            <div class="col-md-4" >
+              <form class="form">
+                <label for="inputEmail2" class="col-sm-2 control-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail2" placeholder="you@youremail.com">
+              </form>
+            </div>
+          </div>
+
         </div>
 
         <div class="modal-footer">
@@ -635,41 +646,62 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="gridSystemModalLabel">Get a <strong>daily</strong> email of all new remote frontend jobs</h4>
+          <h4 class="modal-title" id="gridSystemModalLabel"> Mail list "Daily Remote frontend (JavaScript) jobs"</h4>
         </div>
 
 
         <div class="modal-body">
           <form>
-            <div class="form-group">
-              <label for="inputEmail3" class="col-sm-4 control-label" style="padding-left: 0px;">Email:</label>
-              <input type="email" class="form-control" id="inputEmail3" placeholder="you@youremail.com">
-            </div>
 
-            <br/>
-            <div class="form-group">
-              <div class="row">
-              <label for="inputUrl4" class="col-sm-4 control-label" style="padding-left: 0px;">A page/post/article URL:</label>
+            <div class="row">
+              <div class="col-md-8">
+                <p>
+                  <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) there will be the email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com during the day
+                </p>
+                <p>
+                  <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.
+                </p>
+                <p>
+                  <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send jobs. Not for marketing/promotional purposes.
+                </p>
               </div>
 
-              <div class="row">
-                <div>
-                  <p>
-                  I love to fill your inbox with fresh jobs on the daily basis and just ask you for a little favor in exchange: I ask for a link.
-                  </p>
-                  <p>
-                  Please link this site from a prominent page of your site or blog. <br/>Alternatively: post on your favorite social network or online forum, link back to this site and share the link.
-                  </p>
-                  <p>
-                  One link is enough: after this your get email updates as long as you wish!
-                  </p>
-                </div>
+              <div class="col-md-4" >
+                      <label for="inputEmail3" class="col-sm-4 control-label" >Email:</label>
+                      <input type="email" class="form-control" id="inputEmail3" placeholder="you@youremail.com">
+
+                      <br/>
+              </div><!-- col-md-4 -->
+            </div><!--row -->
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+
+            <div class="row">
+
+              <div class="col-md-8">
+                <h4>A long text <s>that no one reads</s></h4>
+                <p>
+                  The Remote4me is a one-man show. I am working on adding new job boards, on improving the classifiers (the "remoteness" classifier, the "profession" classifier, the "tech stack" classifier, just to name a few). I'm adding new features (like this mail list) to this site. And I'm doing marketing for Remote4me. And marketing eats a lot of time! So IF you help me with marketing THEN I have more time to work on new features (improved "time zone" classifier, new "work authorization" classifier etc).
+                </p>
+                <p>
+                  How can you help me with marketing for Remote4me:
+                  Please link this site from a prominent page on your site or blog. Alternatively, <strong>post on your favorite social network or online forum, and link back to this site</strong>.
+                  <strong>Share the link to your post (the field on the right side)</strong>.
+                  One link is enough. After this, you'll get email updates for as long as you wish.
+                </p>
+              </div>
+
+              <div class="col-md-4">
+                <label for="inputUrl4" class="col-sm-12 control-label">A page/post/article URL:</label>
                 <input type="url" class="form-control" name="url" id="inputUrl4" placeholder="https://social-network.com/post-url" pattern="https://.*" size="15" width="">
               </div>
-            </div>
+
+            </div><!--row -->
+
 
           </form>
-        </div>
+        </div><!--modal body -->
 
         <div class="modal-footer">
           <button type="button" class="btn btn-primary">Subscribe</button>
