--- a/assets/experimental/test-subscribe-1.html
+++ b/assets/experimental/test-subscribe-1.html
@@ -615,13 +615,13 @@
           <div class="row">
             <div class="col-md-8">
               <p>
-                <span class="fa fa-check" style="color: #428bca;"></span> Every Saturday there will be the email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com last week.
+                <span class="fa fa-check" style="color: #428bca;"></span> Every Saturday there will be an email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com last week.
               </p>
               <p>
                 <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.
               </p>
               <p>
-                <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send jobs. Not for marketing/promotional purposes.
+                <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send new job ads. Not for marketing/promotional purposes.
               </p>
             </div>
             <div class="col-md-4" >
@@ -656,13 +656,13 @@
             <div class="row">
               <div class="col-md-8">
                 <p>
-                  <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) there will be the email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com during the day
+                  <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) there will be an email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com during the day
                 </p>
                 <p>
                   <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.
                 </p>
                 <p>
-                  <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send jobs. Not for marketing/promotional purposes.
+                  <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send new job ads. Not for marketing/promotional purposes.
                 </p>
               </div>
 
