--- a/assets/experimental/test-subscribe-1.html
+++ b/assets/experimental/test-subscribe-1.html
@@ -654,48 +654,41 @@
           <form>
 
             <div class="row">
-              <div class="col-md-8">
-                <p>
-                  <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) there will be an email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com during the day
-                </p>
-                <p>
-                  <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.
-                </p>
-                <p>
-                  <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send new job ads. Not for marketing/promotional purposes.
-                </p>
-              </div>
+                  <span class="fa fa-check" style="color: #428bca;"></span> Every evening (21:00 EST) there will be an email with the list of <em>Remote frontend (JavaScript) jobs</em> appeared on remote4me.com during the day.<br/>
+                  <span class="fa fa-check" style="color: #428bca;"></span> Unsubscribe any time: the unsubscribe link is in every email.<br/>
+                  <span class="fa fa-check" style="color: #428bca;"></span> This mail list is to send new job ads. Not for marketing/promotional purposes.<br/>
 
-              <div class="col-md-4" >
-                      <label for="inputEmail3" class="col-sm-4 control-label" >Email:</label>
-                      <input type="email" class="form-control" id="inputEmail3" placeholder="you@youremail.com">
+              <div class="row">
+                <div class="col-md-8" >
+                  <label for="inputEmail3" class="col-sm-4 control-label" >Email:</label>
+                  <input type="email" class="form-control col-sm-8" id="inputEmail3" placeholder="you@youremail.com">
+                </div>
+              </div><!--row -->
 
-                      <br/>
-              </div><!-- col-md-4 -->
             </div><!--row -->
 
-            <p>&nbsp;</p>
             <p>&nbsp;</p>
 
             <div class="row">
 
-              <div class="col-md-8">
                 <h4>A long text <s>that no one reads</s></h4>
                 <p>
                   The Remote4me is a one-man show. I am working on adding new job boards, on improving the classifiers (the "remoteness" classifier, the "profession" classifier, the "tech stack" classifier, just to name a few). I'm adding new features (like this mail list) to this site. And I'm doing marketing for Remote4me. And marketing eats a lot of time! So IF you help me with marketing THEN I have more time to work on new features (improved "time zone" classifier, new "work authorization" classifier etc).
                 </p>
                 <p>
-                  How can you help me with marketing for Remote4me:
-                  Please link this site from a prominent page on your site or blog. Alternatively, <strong>post on your favorite social network or online forum, and link back to this site</strong>.
-                  <strong>Share the link to your post (the field on the right side)</strong>.
+                  How can you help with marketing for Remote4me:<br/>
+                  <span class="fa fa-check" style="color: #428bca;"></span> Please link this site from a prominent page on your site or blog.<br/>
+                  <span class="fa fa-check" style="color: #428bca;"></span> Alternatively, post on your favorite social network or online forum, and link back to this site.<br/>
+                  <strong>Share the link to your post (the field below)</strong>.
                   One link is enough. After this, you'll get email updates for as long as you wish.
                 </p>
-              </div>
 
-              <div class="col-md-4">
-                <label for="inputUrl4" class="col-sm-12 control-label">A page/post/article URL:</label>
-                <input type="url" class="form-control" name="url" id="inputUrl4" placeholder="https://social-network.com/post-url" pattern="https://.*" size="15" width="">
-              </div>
+              <div class="row">
+                <div class="col-md-8" >
+                  <label for="inputUrl4" class="col-sm-12 control-label">A page/post/article URL:</label>
+                  <input type="url" class="form-control" name="url" id="inputUrl4" placeholder="https://social-network.com/post-url" pattern="https://.*" size="15" width="">
+                </div>
+              </div><!--row -->
 
             </div><!--row -->
 
